<resources>
    <string name="app_name">Chengyu</string>

    <!-- Titles for Main Screen tabs -->
    <string name="tab_home_title">Home</string>
    <string name="tab_categories_title">Categories</string>
    <string name="tab_idiom_bank_title">Favourites</string>
    <string name="idiom_of_the_day">Idiom of the Day</string>
    <string name="today_idiom_widget">Today\'s idiom</string>

    <!-- Course choices -->
    <string name="course_most_commonly_used">Most Commonly Used</string>
    <string name="course_beginner_level">Beginner Level</string>
    <string name="course_intermediate_level">Intermediate Level</string>
    <string name="course_advanced_level">Advanced Level</string>
    <string name="course_list_title">Courses</string>
    <string name="all_idioms_course">All Idioms</string>

    <!-- Detail view of the idiom -->
    <string name="translation_tv">Translation:</string>
    <string name="examples_tv">Examples</string>
    <string name="explanation_tv">Explanation:</string>
    <string name="youtube_link_description">Watch me explaining in Chinese</string>
    <string name="added_to_favourites">This idiom is added to Favourites</string>
    <string name="removed_from_favourites">This idiom is removed from Favourites</string>
    <string name="msg_add_favourite_idioms">Mark some idioms as Favourite, and they will show up here!</string>

    <!-- Content descriptions -->
    <string name="cd_translation">Translation</string>
    <string name="cd_sound_play_button">Play the audio for idiom</string>
    <string name="cd_pronunciation">Pronunciation is</string>
    <string name="cd_unmark_as_favourite">Unmark as favourite</string>
    <string name="cd_mark_as_favourite">Mark as favourite</string>
    <string name="cd_google_ads">Click to see Google ads</string>
    <string name="cd_favourite_button">Mark or unmark as favourite idiom</string>
    <string name="cd_youtube_play_button">Youtube play button</string>
    <string name="cd_empty_view">Image for this empty screen</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Shared Preferences -->
    <string name="app_started_before_key">app_started_before</string>

    <!-- Recorder buttons -->
    <string name="button_record">Start Recording</string>
    <string name="button_play">Start Playing</string>
    <string name="button_record_stop">Stop Recording</string>
    <string name="button_play_stop">Stop Playing</string>
    <string name="detail_activity_title">title</string>

</resources>
