<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="me.anky.coolchineseidioms.HomeFragment">

    <LinearLayout
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/margin_16dp"
        android:paddingLeft="@dimen/margin_8dp"
        android:paddingStart="@dimen/margin_8dp"
        android:paddingRight="@dimen/margin_8dp"
        android:paddingEnd="@dimen/margin_8dp">

        <!-- CardView: Idiom of the Day -->
        <include layout="@layout/cardview_layout" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="@dimen/margin_8dp"
            android:paddingTop="@dimen/margin_8dp"
            android:text="@string/course_list_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

        <TextView
            android:id="@+id/common_idioms_course"
            style="@style/CourseStyle"
            android:text="@string/course_most_commonly_used" />

        <include layout="@layout/divider_view" />

        <TextView
            android:id="@+id/beginner_level_course"
            style="@style/CourseStyle"
            android:text="@string/course_beginner_level" />

        <include layout="@layout/divider_view" />

        <TextView
            android:id="@+id/intermediate_level_course"
            style="@style/CourseStyle"
            android:text="@string/course_intermediate_level" />

        <include layout="@layout/divider_view" />

        <TextView
            android:id="@+id/advanced_level_course"
            style="@style/CourseStyle"
            android:text="@string/course_advanced_level" />

        <include layout="@layout/divider_view" />

        <TextView
            android:id="@+id/all_idioms_course"
            style="@style/CourseStyle"
            android:text="@string/all_idioms_course" />
    </LinearLayout>
</ScrollView>
